--- a/index.html
+++ b/index.html
@@ -109,34 +109,20 @@
       <a class="navbar-brand mp-brand" href="index.html">陈小红</a>
 
       <div class="" id="main_nav">
+
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html"> 个人作品 </a></li>
+          <li class="nav-item"><a class="nav-link" href="https://vr.3d66.com/vr/index_detail_1533952.asp"> 360全景作品-1 </a></li>
+          <li class="nav-item"><a class="nav-link" href="https://vr.justeasy.cn/view/1593snmf3430u411-1593509059.html"> 360全景作品-2 </a></li>
         </ul>
-      </li>
-    </ul>
+
+      </div>
   </div> <!-- navbar-collapse.// -->
 
 </div> <!-- container-fluid.// -->
 
 </nav>
 
-<nav class="autohide navbar">
 
-  <div class="container">
-
-    <a class="navbar-brand mp-brand" href="index.html">陈小红</a>
-
-    <div class="" id="main_nav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html"> 个人作品 </a></li>
-      </ul>
-    </li>
-  </ul>
-</div> <!-- navbar-collapse.// -->
-
-</div> <!-- container-fluid.// -->
-
-</nav>
 <!-- ============= navbar end ============== -->
 
 
