--- a/meishi.html
+++ b/meishi.html
@@ -103,9 +103,11 @@
       <a class="navbar-brand mp-brand" href="index.html">陈小红</a>
 
       <div class="" id="main_nav">
+        <!--
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html"> 个人作品 </a></li>
         </ul>
+        -->
       </li>
     </ul>
   </div> <!-- navbar-collapse.// -->
@@ -121,12 +123,14 @@
     <a class="navbar-brand mp-brand" href="index.html">陈小红</a>
 
     <div class="" id="main_nav">
+     <!--
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html"> 个人作品 </a></li>
       </ul>
+      -->
     </li>
   </ul>
-</div> <!-- navbar-collapse.// -->
+</div>  navbar-collapse.// -->
 
 </div> <!-- container-fluid.// -->
 
